fixed overflow workshops-status

--- a/src/app/session/workshops/workshops-status.component.css
+++ b/src/app/session/workshops/workshops-status.component.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  overflow-y: scroll
 }
 span.seeMore:hover {
   color: #008ae6;
